spacing fix

--- a/themes/custom/d8_materialize/css/components/custom/d8_materialize.css
+++ b/themes/custom/d8_materialize/css/components/custom/d8_materialize.css
@@ -2125,7 +2125,7 @@ footer.page-footer .footer-copyright {
       margin: 0; } }
 
 .profile .row.user-profile {
-  margin: 80px 0 200px; }
+  margin-top: 80px; }
 
 .profile .field--name-user-picture {
   margin-top: 10px; }
