--- a/themes/custom/d8_materialize/sass/components/custom/_profile.scss
+++ b/themes/custom/d8_materialize/sass/components/custom/_profile.scss
@@ -1,6 +1,7 @@
 .profile {
   .row.user-profile {
-    margin: 80px 0 200px;
+    margin-top: 80px;
+
   }
   .field--name-user-picture {
     margin-top: 10px;
